# smoked-salmon

./: .gitignore  .gitmodules  .venv  Dockerfile  README.md  config.py.txt  pyproject.toml  requirements.txt  seeding.config.yaml.template
salmon/: __init__.py  commands.py
salmon/common/: __init__.py
salmon/images/: __init__.py  imgur.py  ptpimg.py  ra.py
salmon/search/: __init__.py  deezer.py  tidal.py
salmon/seeding/: clients.py
salmon/sources/: tidal.py
salmon/tagger/: __init__.py  combine.py  foldername.py  folderstructure.py  metadata.py  pre_data.py  retagger.py
salmon/tagger/sources/: base.py  itunes.py
salmon/trackers/: __init__.py  base.py  ops.py
salmon/uploader/: __init__.py  dupe_checker.py  preassumptions.py  request_checker.py  spectrals.py  upload.py
