[tool.poetry]
name = "salmon"
version = "0.9.0"
description = "An uploading script for Gazelle-based music trackers."
authors = ["nobody <nobody@exeample.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.9||^3.10"
requests = "^2.31.0"
click = "^7.1.2"
bs4 = "^0.0.1"
colorama = "^0.4.6"
dottorrent = "^1.10.1"
musicbrainzngs = "^0.7.1"
mutagen = "^1.47.0"
pyperclip = "^1.8.2"
pycryptodome = "^3.18.0"
aiohttp = "^3.8.5"
aiohttp-jinja2 = "^1.5.1"
jinja2 = "^3.1.2"
pyimgur = "^0.6.0"
bitstring = "^3.1.9"
heybrochecklog = "^1.3.2"
yaspin = "^0.18.0" 
ratelimit = "^2.2.1"
rich = "^1.3.1"
markupsafe = "=2.0.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
isort = "^4.3.21"
flake8 = "^3.9.2"

[tool.black]
line-length = 88
target-version = ['py39', 'py310']
skip-string-normalization = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
